--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mantine-next-template",
+  "name": "health-app",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -20,13 +20,18 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.8.1",
     "@mantine/core": "7.8.1",
+    "@mantine/dates": "^7.8.1",
     "@mantine/hooks": "7.8.1",
     "@next/bundle-analyzer": "^14.1.3",
     "@tabler/icons-react": "^3.0.0",
+    "dayjs": "^1.11.11",
+    "embla-carousel-react": "^8.0.2",
     "next": "14.1.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.76.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
