--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -10,12 +10,14 @@ runs:
 
     - name: Cache dependencies ⚡
       id: cache_dependencies
-      uses: actions/cache@v3
+      uses: borales/actions-yarn
       with:
         path: node_modules
-        key: node-modules-${{ hashFiles('package-lock.json') }}
+        key: node-modules-${{ hashFiles('yarn.lock') }}
 
     - name: Install dependencies 🔧
+      uses: borales/actions-yarn
       shell: bash
       if: steps.cache_dependencies.outputs.cache-hit != 'true'
-      run: npm install
+      with: 
+        cmd: install
