--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -10,14 +10,12 @@ runs:
 
     - name: Cache dependencies ⚡
       id: cache_dependencies
-      uses: borales/actions-yarn
+      uses: actions/cache@v3
       with:
         path: node_modules
-        key: node-modules-${{ hashFiles('yarn.lock') }}
+        key: node-modules-${{ hashFiles('package-lock.json') }}
 
     - name: Install dependencies 🔧
-      uses: borales/actions-yarn
       shell: bash
       if: steps.cache_dependencies.outputs.cache-hit != 'true'
-      with: 
-        cmd: install
+      run: yarn install
