--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "@mantine/carousel": "^7.8.1",
     "@mantine/core": "7.8.1",
     "@mantine/dates": "^7.8.1",
+    "@mantine/form": "^7.9.1",
     "@mantine/hooks": "7.8.1",
     "@next/bundle-analyzer": "^14.1.3",
     "@tabler/icons-react": "^3.0.0",
+    "constate": "^3.3.2",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.0.2",
     "next": "14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use-cookie": "^1.6.1",
     "sass": "^1.76.0"
   },
   "devDependencies": {
